cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link_View__c/KV_Presentation_Link_View__c.object-meta.xml
<CustomObject>
    <label>KV Presentation Link View</label>
    <nameField>
        <displayFormat>{MM}/{DD}/{YY}-{0000}</displayFormat>
        <label>KV Presentation Link View ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KV Presentation Link Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>