cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link_View__c/fields/KV_Presentation_Link__c.field-meta.xml
<CustomField>
    <fullName>KV_Presentation_Link__c</fullName>
    <label>KV Presentation Link</label>
    <referenceTo>KV_Presentation_Link__c</referenceTo>
    <relationshipLabel>KV Presentation Link Views</relationshipLabel>
    <relationshipName>KV_Presentation_Link_Views</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>