cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link_View__c/fields/Slides_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Slides_Viewed__c</fullName>
    <label>Slides Viewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>