cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link_View__c/fields/Slides_Viewed_List__c.field-meta.xml
<CustomField>
    <fullName>Slides_Viewed_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Slides Viewed List</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>