cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link_View__c/fields/Slides_Viewed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Slides_Viewed_Percentage__c</fullName>
    <formula>Slides_Viewed__c / Total_Slides__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slides Viewed %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>