cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link_View__c/fields/Total_Slides__c.field-meta.xml
<CustomField>
    <fullName>Total_Slides__c</fullName>
    <label>Total Slides</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>