cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link_View__c/fields/Video_Duration__c.field-meta.xml
<CustomField>
    <fullName>Video_Duration__c</fullName>
    <label>Video Duration</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>