cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link_View__c/fields/Video_Playback__c.field-meta.xml
<CustomField>
    <fullName>Video_Playback__c</fullName>
    <label>Video Playback</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>