cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link_View__c/fields/Video_Playback_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Video_Playback_Percentage__c</fullName>
    <formula>Video_Playback__c / Video_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Video Playback %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>