cititechdNew2024Jan/force-app/main/default/objects/KV_Presentation_Link_View__c/fields/Viewing_Time__c.field-meta.xml
<CustomField>
    <fullName>Viewing_Time__c</fullName>
    <label>Viewing Time</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>